fix(mail) liste de destinataire invisible

--- a/skins/mel_elastic/styles/less/style.less
+++ b/skins/mel_elastic/styles/less/style.less
@@ -3827,7 +3827,7 @@ table.messagelist .unread td.subject span.msgicon::before {
       
       
 a.rcmContactAddress {
-    color: #333;/*#96b9e7 */
+    color: var(--dropdown-menu-text-color);/*#96b9e7 */
     font-weight: lighter;
 } 
 /**********************end added**************************/
